@@ -238,6 +238,8 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * UtfNormal::cleanUp on an invalid utf-8 sequence no longer returns false if intl installed.
 * (bug 28561) The css class small will no longer make nested elements even smaller.
 * (bug 13172) Array type exif data (like GPS) was not being extracted from images.
+* (bug 28532) wfMsgExt() and wfMsgWikiHtml() use $wgOut->parse()
+* (bug 16129) Transcluded special pages expose strip markers when they output parsed messages
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
